# android_uvc_camera

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
3rd_libs/: AndroidManifest.xml  CMakeLists.txt  build.gradle
3rd_libs/libjpeg-turbo/: CMakeLists.txt
3rd_libs/libusb/: CMakeLists.txt
3rd_libs/libuvc/: CMakeLists.txt  CMakeLists.txt.bak
gradle/wrapper/: gradle-wrapper.properties
libcommon/: build.gradle
libcommon-4.1.1/: build.gradle
libcommon-4.1.1/src/main/java/com/serenegiant/utils/: FileUtils.java
libcommon/src/main/java/com/serenegiant/camera/: Camera2Utils.java  CameraUtils.java
libcommon/src/main/java/com/serenegiant/glutils/: AbstractDistributeTask.java
libcommon/src/main/java/com/serenegiant/io/: DiskLruCache.java
libcommon/src/main/java/com/serenegiant/mediastore/: LoaderDrawable.java  MediaStoreOutputStream.java
libcommon/src/main/java/com/serenegiant/net/: NetworkChangedReceiver.java
libcommon/src/main/java/com/serenegiant/preference/: DialogPreferenceV7.java
libcommon/src/main/java/com/serenegiant/system/: SAFUtils.java
libcommon/src/main/java/com/serenegiant/utils/: SAFSingleFileUtils.java  SAFUtils.java
libcommon/src/main/java/com/serenegiant/view/: ViewTransformDelegater.java
libcommon/src/main/java/com/serenegiant/widget/: Keyboard.java  KeyboardView.java  ZoomAspectScaledTextureView2.java
libuvccamera/: build.gradle
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/java/com/serenegiant/camera/: AbstractUVCCameraHandler.java  UVCCameraHandler.java  UVCCameraHandlerMultiSurface.java
libuvccamera/src/main/java/com/serenegiant/common/: BaseActivity.java  YUV.java
libuvccamera/src/main/java/com/serenegiant/encoder/: MediaEncoder.java  RecordParams.java  (+1 more)
libuvccamera/src/main/jni/: Android.mk  CMakeLists.txt
libuvccamera/src/main/jni/cmake/modules/: cmd_function.cmake
libuvccamera/src/main/jni/libcoreutils/: CMakeLists.txt
libuvccamera/src/main/jni/libcoreutils/base/: Status.cpp  image_format.h
libuvccamera/src/main/jni/libcoreutils/cpu/: cpu_manipulate.cc  cpu_manipulate.h  cpu_util.cpp  device_affinity.h
libuvccamera/src/main/jni/libcoreutils/gpu/: GLContext.cpp  gpu_buffer_format.cpp
libuvccamera/src/main/jni/libcoreutils/include/base/: Status.h
libuvccamera/src/main/jni/libcoreutils/include/gpu/: GlContextExecutor.h  gl_base.h  gpu_buffer_format.h
libuvccamera/src/main/jni/libcoreutils/include/thread/: Executor.h  JobDispatcher.h  ThreadPool.h  ThreadPoolExecutor.h  ThreadPoolExecutorOptions.h
libuvccamera/src/main/jni/libcoreutils/include/utils/: ScopedTimer.h
libuvccamera/src/main/jni/libcoreutils/port/: base_types.h  clog.h
libuvccamera/src/main/jni/libcoreutils/thread/: JobDispatcher.cpp  ThreadPool.cpp  ThreadPoolExecutor.cpp
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/doc/html/: annotated.html  classes.html  functions.html  functions_vars.html  group___turbo_j_p_e_g.html  index.html  modules.html  structtjregion.html  structtjscalingfactor.html  structtjtransform.html
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/java/: TJBench.java  TJExample.java  TJUnitTest.java
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJScalingFactor.java  TJTransform.java  TJTransformer.java  YUVImage.java
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/release/: Distribution.xml
libuvccamera/src/main/jni/libjpeg-turbo/sharedlib/: CMakeLists.txt
libuvccamera/src/main/jni/libusb/: CMakeLists.txt
libuvccamera/src/main/jni/libusb/libusb/: core.c  libusb.h
libuvccamera/src/main/jni/libusb/libusb/os/: android_usbfs.c
libuvccamera/src/main/jni/libuvc/: CMakeLists.txt
libuvccamera/src/main/jni/libuvccamera/: CMakeLists.txt  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  libUVCCamera.h
libuvccamera/src/main/jni/rapidjson/doc/misc/: DoxygenLayout.xml  footer.html  header.html
libuvccamera/src/main/jni/utils/: utilbase.h
libuvccamera/src/main/res/xml/: device_filter.xml
native/: CMakeLists.txt  README.md  build.sh
native/cmake/modules/: inner_function.cmake
native/crosss_compile/Cross-Compile-Jetson/: setup_cross_tc.sh
native/libcoreutils/: libcoreutilsConfig.cmake.in
native/libcoreutils/base/: Status.cpp
native/libcoreutils/cpu/: cpu_util.h
native/libcoreutils/gpu/: GLContext_internal.h  GLTextureBuffer.cpp  GlContextExecutor.cpp  gpu_debug_helper.cpp
native/libcoreutils/include/base/: Status.h
native/libcoreutils/include/gpu/: GLContext.h  GlTextureBuffer.h  gpu_debug_helper.h
native/libcoreutils/include/thread/: thread_option.h
native/libcoreutils/include/utils/: ScopedTimer.h  str_helper.h
native/libcoreutils/port/: base_types.h  clog.h
native/libcoreutils/thread/: Executor.cpp  JobDispatcher.cpp  ThreadPoolExecutor.cpp
native/libcoreutils/utils/: ScopedTimer.cpp
native/libusb/: CMakeLists.txt
native/libuvccamera/: UVCCamera.cpp  serenegiant_usb_UVCCamera.cpp
native/rpi_camera/: rpi_camera.md
native/v4l2/: CMakeLists.txt  avilib.c  avilib.h  main.c  uvcvideo.h  v4l2_uvc.md  v4l2uvc.c  v4l2uvc.h
usbCameraCommon/: build.gradle
usbCameraTest/: build.gradle
usbCameraTest/src/main/: AndroidManifest.xml
usbCameraTest/src/main/res/values/: styles.xml
usbCameraTest/src/main/res/xml/: device_filter.xml
usbCameraTest0/: build.gradle
usbCameraTest0/src/main/: AndroidManifest.xml
usbCameraTest2/: build.gradle
usbCameraTest2/src/main/: AndroidManifest.xml
usbCameraTest2/src/main/res/layout/: activity_main.xml
usbCameraTest3/: build.gradle
usbCameraTest4/: build.gradle
usbCameraTest5/: build.gradle
usbCameraTest6/: build.gradle
usbCameraTest7/: build.gradle
usbCameraTest7/src/main/res/values/: styles.xml
usbCameraTest8/: build.gradle
usbCameraTest8/src/main/res/values/: styles.xml
usbCameraTest9/: build.gradle  proguard-project.txt
usbCameraTest9/src/main/: AndroidManifest.xml
usbCameraTest9/src/main/res/layout/: activity_main.xml
usbCameraTest9/src/main/res/values/: strings.xml
(+25 files in other folders)
